--- a/app/assets/stylesheets/jpstudy/static_pages.scss
+++ b/app/assets/stylesheets/jpstudy/static_pages.scss
@@ -1,5 +1,6 @@
 .about-page,
-.word-list-instructions-page {
+.word-list-instructions-page,
+.word-limit-explanation-page {
   h1.title {
     margin: 12px 0px 32px 0px;
     @media (max-width: 600px) {
