--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -7,7 +7,7 @@
 
   <div class="stats">
     <p>
-      <strong>Total words created:</strong>
+      <strong>Total words:</strong>
       <%= @total_words_created_count %>
     </p>
     <p>
