--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -46,7 +46,7 @@
     </div>
 
     <div class="source">
-      <span class="added-on">Added <%= word.added_on %></span>
+      <span class="added-on">Added <%= word.added_to_list_on %></span>
       <% if word.source_name.present? %>
         <span class="source-name">
           <span class="large-only">from </span>
