--- a/app/assets/stylesheets/jpstudy/index.scss
+++ b/app/assets/stylesheets/jpstudy/index.scss
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 
-// https://fonts.google.com/specimen/Roboto#standard-styles
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+// https://fonts.google.com/specimen/Roboto
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+// https://fonts.google.com/specimen/Roboto+Mono
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,600;1,700&display=swap");
 
 @import "variables";
 @import "shared";
