--- a/app/assets/stylesheets/jpstudy/square.scss
+++ b/app/assets/stylesheets/jpstudy/square.scss
@@ -1,18 +1,10 @@
 .square {
   .square-button {
-    text-decoration: none;
-    padding: 8px 16px;
-    border-radius: 0.6em;
-    border-style: solid;
+    @extend .basic-button;
     background-color: #000000;
     border-color: #000000;
     color: #fff;
-    font-size: 1em;
     display: inline-block;
-
-    &:hover {
-      cursor: pointer;
-    }
   }
   .embedded-checkout-link-html-hidden-textarea,
   .checkout-button-html-hidden-textarea {
