--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -1,20 +1,23 @@
-<div class="word-form">
+<div class="word-form" data-controller="word-form">
   <%= form_with(model: word) do |form| %>
     <div class="form-field">
       <%= form.label :english %>
       <%= form.text_field :english, autocomplete: "off", data: { lpignore: true }, autofocus: true, required: true %>
     </div>
+
     <div class="form-field">
       <%= form.label :japanese %>
       <%= form.text_field :japanese, autocomplete: "off", data: { lpignore: true }, required: true %>
     </div>
+
     <div class="form-field">
       <%= form.label :source_name %>
-      <%= form.text_field :source_name, autocomplete: "off", data: { lpignore: true } %>
+      <%= form.text_field :source_name, autocomplete: "off", data: { lpignore: true, word_form_target: "sourceName", action: "change->word-form#validateSource" } %>
     </div>
+
     <div class="form-field">
       <%= form.label :source_reference %>
-      <%= form.text_field :source_reference, autocomplete: "off", data: { lpignore: true } %>
+      <%= form.text_field :source_reference, autocomplete: "off", data: { lpignore: true, word_form_target: "sourceReference", action: "keyup->word-form#validateSource" } %>
     </div>
 
     <div class="form-field">
@@ -23,7 +26,7 @@
     </div>
 
     <div class="form-actions">
-      <%= form.submit class: "button-blue submit" %>
+      <%= form.submit class: "button-blue submit", data: { controller: "disable", disable_with_value: "Saving...", action: "disable#disableButton", disable_target: "button" } %>
     </div>
   <% end %>
 </div>
