add -webkit-appearance: none to close-flash button for mobile safari

--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -83,6 +83,7 @@ main {
     background-color: #34D399;
   }
   .close-flash-button {
+    -webkit-appearance: none;
     float: right;
     border: none;
     border-radius: 50px;
