--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -84,15 +84,27 @@ main {
   }
   .close-flash-button {
     -webkit-appearance: none;
-    float: right;
+    color: #111827;
+    background-color: rgba(243, 244, 246, 0.5); // #F3F4F6
     border: none;
+    opacity: 0.6;
+
     border-radius: 50px;
-    padding: 4px 6px;
-    background-color: rgba(255, 255, 255, 0.5);
-    transform: scale(0.8);
-    margin: 3px;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: right;
+    padding: 2px;
+    margin: 4px;
+
     &:hover {
       cursor: pointer;
+      opacity: 1;
+    }
+    .icon-solid {
+      height: 16px;
     }
   }
 }
