--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -68,15 +68,18 @@ main {
   color: white;
   border-radius: 4px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  margin-bottom: 25px;
-  .notice {
+  margin-bottom: 8px;
+  &:last-child {
+    margin-bottom: 25px;
+  }
+  .message {
     padding: 16px 20px;
     margin: 0px;
   }
   &.alert {
     background-color: #DC2626;
   }
-  &.warning {
+  &.notice {
     background-color: #F59E0B;
   }
   &.success {
