--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,88 +6,21 @@
     <title>jpstudy</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <% if flash[:alert] || flash[:notice] || flash[:success] %>
+    <%# if flash[:alert] || flash[:notice] || flash[:success] %>
       <%# There may be another way to solve this, but the data-turbo-preview was %>
       <%# causing subsequent flash messages not to appear after an initial flash %>
       <%# was removed once. %>
       <meta name="turbo-cache-control" content="no-preview">
-    <% end %>
+    <%# end %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <nav>
-      <div class="left-links"></div>
-      <div class="center-links">
-        <%= link_to(words_path) do %>
-          <%= heroicon "collection" %>
-          <small class="icon-subtext">Words</small>
-        <% end %>
-        <% if @current_user %>
-          <%= link_to(stats_user_path(@current_user)) do %>
-            <%= heroicon "presentation-chart-bar" %>
-            <small class="icon-subtext">Stats</small>
-          <% end %>
-        <% end %>
-        <%= link_to(in_out_words_path, class: "in-out-link") do %>
-          <%= heroicon "switch-vertical" %>
-          <small class="icon-subtext">I/O</small>
-        <% end %>
-        <%= link_to(about_path) do %>
-          <%= heroicon "heart" %>
-          <small class="icon-subtext">About</small>
-        <% end %>
-        <% if @current_user %>
-          <%= link_to(@current_user) do %>
-            <%= heroicon "user-circle" %>
-            <small class="icon-subtext">Profile</small>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="right-links">
-        <% if @current_user.present? %>
-          <%= button_to(logout_path, method: :delete, class: "logout-button") do %>
-            <%= heroicon "logout" %>
-            <small class="icon-subtext">Logout</small>
-          <% end %>
-        <% else %>
-          <%= link_to(signup_path, class: "signup-button") do %>
-            <%= heroicon "user-add" %>
-            <small class="icon-subtext">Signup</small>
-          <% end %>
-          <%= link_to(login_path, class: "login-button") do %>
-            <%= heroicon "login" %>
-            <small class="icon-subtext">Login</small>
-          <% end %>
-        <% end %>
-      </div>
-    </nav>
+    <%= render "navigation" %>
     <main>
       <section class="page-content">
-        <% if flash[:alert] %>
-          <div class="flash alert" data-controller="flash" data-flash-target="flashContainer">
-            <button class="close-flash-button" data-action="click->flash#close">
-              <%= heroicon "x" %>
-            </button>
-            <p class="notice"><%= flash[:alert] %></p>
-          </div>
-        <% elsif flash[:notice] %>
-          <div class="flash warning" data-controller="flash" data-flash-target="flashContainer">
-            <button class="close-flash-button" data-action="click->flash#close">
-              <%= heroicon "x" %>
-            </button>
-            <p class="notice"><%= flash[:notice] %></p>
-          </div>
-        <% elsif flash[:success] %>
-          <div class="flash success" data-controller="flash" data-flash-target="flashContainer">
-            <button class="close-flash-button" data-action="click->flash#close">
-              <%= heroicon "x" %>
-            </button>
-            <p class="notice"><%= flash[:success] %></p>
-          </div>
-        <% end %>
-
+        <%= render "flashes" %>
         <%= yield %>
       </section>
     </main>
