Fix cancel link, add padding for mobile

--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -59,7 +59,7 @@ main {
   width: 100%;
   justify-content: center;
   .page-content {
-    padding: 12px;
+    padding: 12px 12px 24px 12px;
     width: 700px;
   }
 }
