--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -13,25 +13,20 @@
     <% end %>
   </div>
 
-  <div class="filters">
-    <% if params[:filter] == "cards_not_created" %>
-      <%= link_to words_path, title: "Only show words without cards", class: "filter-on" do %>
-        <%= heroicon "adjustments" %>
-        <span class="filter-description">
-          Only words without cards
-        </span>
-      <% end %>
-    <% else %>
-      <%= link_to words_path(filter: "cards_not_created"), title: "Show all words", class: "filter-off" do %>
-        <%= heroicon "adjustments" %>
-        <span class="filter-description">
-          All words
-        </span>
-      <% end %>
-    <% end %>
-  </div>
+  <%= render "filters" %>
 
   <div class="words-list-container">
-    <%= render partial: "words/word", collection: @words, cached: true %>
+    <%= turbo_frame_tag "words_#{@page}" do %>
+      <%= render partial: "words/word", collection: @words, cached: true %>
+
+      <% if @next_page %>
+        <%= turbo_frame_tag "words_#{@next_page}", loading: :lazy, src: words_path(page: @next_page) do %>
+          <h3 class="loading-message">
+            <div class="loader"></div>
+            <span>Loading more words...</span>
+          </h3>
+        <% end %>
+      <% end %>
+    <% end %>
   </div>
 </div>
