--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <%# end %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <noscript>
+      <%= stylesheet_link_tag "noscript", "data-turbo-track": "reload" %>
+    </noscript>
     <%= javascript_importmap_tags %>
   </head>
   <body>
