--- a/app/views/words/_filters.html.erb
+++ b/app/views/words/_filters.html.erb
@@ -1,13 +1,24 @@
 <div class="filters">
+  <% if params[:search] %>
+    <% new_params = params[:filter] ? { filter: params[:filter] } : {} %>
+    <%= link_to words_path(new_params), title: "Your search", class: "search-results" do %>
+      <%= heroicon "search", variant: :outline %>
+      <span class="filter-description">
+        Search: '<%= params[:search] %>'
+      </span>
+    <% end %>
+  <% end %>
   <% if params[:filter] == "cards_not_created" %>
-    <%= link_to words_path, title: "Only show words without cards", class: "filter-on" do %>
+    <% new_params = params[:search] ? { search: params[:search] } : {} %>
+    <%= link_to words_path(new_params), title: "Only showing words without cards", class: "filter-on" do %>
       <%= heroicon "adjustments" %>
       <span class="filter-description">
         Only words without cards
       </span>
     <% end %>
   <% else %>
-    <%= link_to words_path(filter: "cards_not_created"), title: "Show all words", class: "filter-off" do %>
+    <% new_params = params[:search] ? { filter: "cards_not_created", search: params[:search] } : { filter: "cards_not_created" } %>
+    <%= link_to words_path(new_params), title: "Showing all words", class: "filter-off" do %>
       <%= heroicon "adjustments" %>
       <span class="filter-description">
         All words
